<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.nexblocks.authguard</groupId>
    <artifactId>authguard</artifactId>
    <packaging>pom</packaging>
    <version>0.23.0</version>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub AuthGuard Maven Packages</name>
            <url>https://maven.pkg.github.com/AuthGuard/AuthGuard</url>
        </repository>
    </distributionManagement>

    <modules>
        <module>config</module>
        <module>dal</module>
        <module>emb</module>
        <module>external</module>
        <module>service-api</module>
        <module>basic-auth</module>
        <module>jwt</module>
        <module>ldap</module>
        <module>sessions</module>
        <module>service</module>
        <module>bootstrap</module>
        <module>bootstrap-steps</module>
        <module>injection</module>
        <module>bindings</module>
        <module>api</module>
        <module>rest</module>
        <module>plugins</module>
        <module>bom</module>
        <module>benchmarks</module>
        <module>crypto</module>
    </modules>

    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
        <maven-source-plugin.version>3.2.0</maven-source-plugin.version>
        <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
        <mutiny.version>2.8.0</mutiny.version>
        <javalin.version>6.1.6</javalin.version>
        <vertx-web.version>4.5.14</vertx-web.version>
        <logback.version>1.4.5</logback.version>
        <jackson.version>2.16.0</jackson.version>
        <immutables.version>2.9.3</immutables.version>
        <jetbrains-annotations.version>13.0</jetbrains-annotations.version>
        <auth0-jwt.version>3.19.3</auth0-jwt.version>
        <apache-commons.version>3.12.0</apache-commons.version>
        <apache-common-codecs.version>1.17.1</apache-common-codecs.version>
        <commons-validator.version>1.7</commons-validator.version>
        <commons-cli.version>1.5.0</commons-cli.version>
        <mapstruct.version>1.5.3.Final</mapstruct.version>
        <bouncy-castle.version>1.70</bouncy-castle.version>
        <bouncy-castle-fips.version>1.0.7</bouncy-castle-fips.version>
        <reflections.version>0.10.2</reflections.version>
        <guice.version>5.1.0</guice.version>
        <rxjava.version>3.1.5</rxjava.version>
        <okhttp.version>4.12.0</okhttp.version>
        <vertx.version>4.5.11</vertx.version>
        <unbounded-ldap.version>5.1.4</unbounded-ldap.version>
        <javax-persistence.version>2.2</javax-persistence.version>
        <jakarta-persistence.version>3.1.0</jakarta-persistence.version>
        <vavr.version>0.10.4</vavr.version>
        <slf4j.version>2.0.0</slf4j.version>
        <totp.version>1.0</totp.version>
        <onetime.version>2.1.1</onetime.version>

        <surefire.version>3.0.0-M3</surefire.version>
        <junit.version>5.5.1</junit.version>
        <assertj.version>3.23.1</assertj.version>
        <easy-random.version>4.0.0</easy-random.version>
        <mockito.version>3.0.0</mockito.version>
        <rest-assured.version>4.3.0</rest-assured.version>
        <wiremock.version>2.27.2</wiremock.version>
    </properties>

    <dependencies>
        <!-- logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <!-- used for generating entities across the board -->
        <dependency>
            <groupId>org.immutables</groupId>
            <artifactId>value</artifactId>
            <version>${immutables.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${jetbrains-annotations.version}</version>
        </dependency>

        <!-- apache commons -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${apache-commons.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-validator</groupId>
            <artifactId>commons-validator</artifactId>
            <version>${commons-validator.version}</version>
        </dependency>

        <!-- mapping -->
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
            <version>${mapstruct.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- dependency injection -->
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>${guice.version}</version>
        </dependency>

        <!-- RxJava -->
        <dependency>
            <groupId>io.reactivex.rxjava3</groupId>
            <artifactId>rxjava</artifactId>
            <version>${rxjava.version}</version>
        </dependency>

        <dependency>
            <groupId>io.smallrye.reactive</groupId>
            <artifactId>mutiny</artifactId>
            <version>${mutiny.version}</version>
        </dependency>

        <!-- testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jeasy</groupId>
            <artifactId>easy-random-core</artifactId>
            <version>${easy-random.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>github_actions</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <excludes>
                                <exclude>**/OAuthServiceClientTest.java</exclude>
                                <exclude>**/OAuthServiceTest.java</exclude>
                                <exclude>**/rest/*.java</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>18</source>
                    <target>18</target>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>

                    <annotationProcessorPaths>
                        <dependency>
                            <groupId>org.immutables</groupId>
                            <artifactId>value</artifactId>
                            <version>${immutables.version}</version>
                        </dependency>

                        <dependency>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </dependency>

                        <path>
                            <groupId>org.openjdk.jmh</groupId>
                            <artifactId>jmh-generator-annprocess</artifactId>
                            <version>1.36</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>io.smallrye</groupId>
                <artifactId>jandex-maven-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>make-index</id>
                        <goals>
                            <goal>jandex</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
            </plugin>

            <!-- source -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- javadoc -->
            <!-- commented out due to an issue with GitHub actions and Immutables -->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-javadoc-plugin</artifactId>-->
<!--                <version>${maven-javadoc-plugin.version}</version>-->

<!--                <configuration>-->
<!--                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>-->
<!--                    <detectJavaApiLink>false</detectJavaApiLink>-->
<!--                    <doclint>none</doclint>-->
<!--                </configuration>-->

<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>attach-javadocs</id>-->
<!--                        <goals>-->
<!--                            <goal>jar</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
        </plugins>
    </build>

</project>